--- a/3DRendering/3DRendering.csproj
+++ b/3DRendering/3DRendering.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Calculations\Calculate.cs" />
     <Compile Include="Data Structures\Vertex.cs" />
+    <Compile Include="Drawing\Drawing.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +60,7 @@
     <Compile Include="Models\Cylinder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Session\Session.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
